--- a/laba2/public/index.html
+++ b/laba2/public/index.html
@@ -28,20 +28,63 @@
 </div>
     <div class="fon">
         <div class="fon-info">
-            <a>We design iOS apps Ut In Nulla Enim. Phasellus Molestie Magna N</a>
-            <b>Ut in Nulla Enim.</b>
-            <div class="c">
-                <div class="d">
-              Fequest a qucte
-                </div>
-</div>
+            <div class="a">We design iOS apps
+                Ut In Nulla Enim.
+                Phasellus Molestie Magna
+                Phasellus Molestie Magna
+                Phasellus Molestie Magna
+                Phasellus Molestie Magna
+                Phasellus Molestie Magna
+                Phasellus Molestie Magna
+                Phasellus Molestie Magna
+            </div>
+            <div class="d">
+                Fequest a qucte
+            </div>
+        </div>
+    <div class="con">
+    </div>
+    <div class="info">
+        <div class="list_div">
+            <div class="list_elem">
+                <img src="image/250px-Serious_sam_logo.jpg">
+                <p>Engaging interfaces</p>
+                <p class="list_standart_p">
+                    Lorem ipsum dolor sit amet, consectetur adi
+                </p>
+                <h class="list_h">
+                   Read more
+                </h>
+            </div>
+            <div class="list_elem">
+                <img src="image/12.jpg">
+                <p>Usable designs</p>
+                <p class="list_standart_p">
+                    Lorem ipsum dolor sit amet, consectetur adipisci
+                </p>
+                <h class="list_h">
+                    Read more
+                </h>
+            </div>
+            <div class="list_elem">
+                <img src="image/1234.jpg">
+                <p>Solid development</p>
+                <p class="list_standart_p">
+                    Lorem ipsum dolor sit amet, consectetur adipi
+                </p>
+                <h class="list_h">
+                    Read more
+                </h>
+            </div>
+        </div>
+
+        <div class="link_list">
+            <img src="image/facebook.png">
+            <img src="image/twitter.png">
+            <img src="image/linkedin.png">
         </div>
     </div>
-
-    <div class="con">
-<div class="simvl"></div>
     </div>
-    <div class="info"></div>
 </div>
 </body>
 </html>
